--- a/public/css/style_article.css
+++ b/public/css/style_article.css
@@ -53,7 +53,7 @@ border-radius: 5rem;
     animation: appear linear;
     animation-timeline: view();
     animation-range: entry 0% cover 40%;
-    text-align: left;
+    text-align: justify;
     padding: 1rem 2rem;
   }
 }
