--- a/public/css/style_article.css
+++ b/public/css/style_article.css
@@ -100,3 +100,43 @@ a {
   padding: 0.5rem;
   vertical-align: middle; 
 }
+
+@media screen and (min-width: 1024px) {
+  .about {
+    border-radius: 2rem;
+    background-color: var(--color-light);
+    animation: appear linear;
+    animation-timeline: view();
+    animation-range: entry 0% cover 40%;
+    display: flex;
+    flex-direction: row;
+
+  &.titleandintro{
+    flex-direction: column;
+  }
+    &.title{
+      text-align: left;
+      font-size: larger;
+      font-family: var(--font-secondary-title);
+      font-weight: bold;
+      text-shadow: none;
+      display: inline;
+  
+    }
+    &.photo {
+      width: 20%;
+      align-self: flex-start;
+      padding-bottom: 0rem;
+    }
+    &.intro{
+      text-align: justify;
+      padding-top: 0rem;
+    }
+  }
+  .readmore{
+    position: absolute;
+    top: 11rem;
+    left: 4rem;
+
+  }
+}
