--- a/public/css/style_article.css
+++ b/public/css/style_article.css
@@ -10,11 +10,16 @@
 }
 
 .readmore {
-background-color: var(--color-dark-elem);
-color: var(--color-bg);
+background-color: var(--color-bg);
+border: solid var(--color-dark-txt); 
+color: var(--color-dark-txt);
 padding: 1rem 2rem 1rem 2rem;
 border-radius: 5rem;
-
+font-weight: 700;
+position: relative;
+}
+.readmore:hover {
+  background-color: var(--color-light);
 }
 .mindmap--container {
   animation: appear linear;
@@ -100,6 +105,19 @@ a {
   width: 2rem;
   padding: 0.5rem;
   vertical-align: middle; 
+}
+
+.contact-btn {
+    padding: 1rem 2rem 1rem 2rem;
+    border-radius: 5rem;
+    margin: auto;
+    width: 90vw;
+    background-color: var(--color-light);
+    border: solid var(--color-dark-txt); 
+    color: var(--color-dark-txt);
+    font-size: large;
+    font-family: var(--font-secondary-title);
+    font-weight: bold;
 }
 
 @media screen and (min-width: 1024px) {
